syntax = "proto3";
package df.plugin;
option go_package = "github.com/secmc/plugin/proto/generated";

enum GameMode {
    SURVIVAL = 0;
    CREATIVE = 1;
    ADVENTURE = 2;
    SPECTATOR = 3;
}

// EffectType mirrors Dragonfly's registered effect IDs for straightforward mapping.
// Keep numeric values aligned with dragonfly/server/entity/effect/register.go.
enum EffectType {
    EFFECT_UNKNOWN = 0;
    SPEED = 1;
    SLOWNESS = 2;
    HASTE = 3;
    MINING_FATIGUE = 4;
    STRENGTH = 5;
    INSTANT_HEALTH = 6;
    INSTANT_DAMAGE = 7;
    JUMP_BOOST = 8;
    NAUSEA = 9;
    REGENERATION = 10;
    RESISTANCE = 11;
    FIRE_RESISTANCE = 12;
    WATER_BREATHING = 13;
    INVISIBILITY = 14;
    BLINDNESS = 15;
    NIGHT_VISION = 16;
    HUNGER = 17;
    WEAKNESS = 18;
    POISON = 19;
    WITHER = 20;
    HEALTH_BOOST = 21;
    ABSORPTION = 22;
    SATURATION = 23;
    LEVITATION = 24;
    FATAL_POISON = 25;
    CONDUIT_POWER = 26;
    SLOW_FALLING = 27;
    // 28, 29 intentionally omitted (Bad Omen, Hero of the Village - not implemented)
    DARKNESS = 30;
}

// Sound is a curated list of common sounds that don't require extra parameters.
// For sounds that require additional context (e.g., BlockPlace, Note), adapters
// may use sensible defaults or ignore extra semantics for now.
enum Sound {
    SOUND_UNKNOWN = 0;
    ATTACK = 1;
    DROWNING = 2;
    BURNING = 3;
    FALL = 4;
    BURP = 5;
    POP = 6;
    EXPLOSION = 7;
    THUNDER = 8;
    LEVEL_UP = 9;
    EXPERIENCE = 10;
    FIREWORK_LAUNCH = 11;
    FIREWORK_HUGE_BLAST = 12;
    FIREWORK_BLAST = 13;
    FIREWORK_TWINKLE = 14;
    TELEPORT = 15;
    ARROW_HIT = 16;
    ITEM_BREAK = 17;
    ITEM_THROW = 18;
    TOTEM = 19;
    FIRE_EXTINGUISH = 20;
}

message Vec3 {
    double x = 1;
    double y = 2;
    double z = 3;
}

message Rotation {
    float yaw = 1;
    float pitch = 2;
}

message BlockPos {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

message ItemStack {
    string name = 1;
    int32 meta = 2;
    int32 count = 3;
}

message BlockState {
    string name = 1;
    map<string, string> properties = 2;
}

message LiquidState {
    BlockState block = 1;
    int32 depth = 2;
    bool falling = 3;
    string liquid_type = 4;
}

message WorldRef {
    string name = 1;
    string dimension = 2;
}

message EntityRef {
    string uuid = 1;
    string type = 2;
    optional string name = 3;
    optional Vec3 position = 4;
    optional Rotation rotation = 5;
}

message DamageSource {
    string type = 1;
    optional string description = 2;
}

message HealingSource {
    string type = 1;
    optional string description = 2;
}

message Address {
    string host = 1;
    int32 port = 2;
}