syntax = "proto3";

package df.plugin;

option go_package = "github.com/secmc/plugin/proto/generated";

import "player_events.proto";
import "world_events.proto";
import "command.proto";
import "actions.proto";
import "mutations.proto";
import "common.proto";

service Plugin {
  rpc EventStream(stream PluginToHost) returns (stream HostToPlugin);
}

message HostToPlugin {
  string plugin_id = 1;
  oneof payload {
    HostHello hello = 10;
    HostShutdown shutdown = 11;
    EventEnvelope event = 20;
  }
}

message HostHello {
  string api_version = 1;
}

message HostShutdown {
  string reason = 1;
}

message EventEnvelope {
  string event_id = 1;
  EventType type = 2;
  bool expects_response = 3; // If an event can be cancelled or mutated it expects an acknowledgement.
  oneof payload {
    PlayerJoinEvent player_join = 10;
    PlayerQuitEvent player_quit = 11;
    PlayerMoveEvent player_move = 12;
    PlayerJumpEvent player_jump = 13;
    PlayerTeleportEvent player_teleport = 14;
    PlayerChangeWorldEvent player_change_world = 15;
    PlayerToggleSprintEvent player_toggle_sprint = 16;
    PlayerToggleSneakEvent player_toggle_sneak = 17;
    ChatEvent chat = 18;
    PlayerFoodLossEvent player_food_loss = 19;
    PlayerHealEvent player_heal = 20;
    PlayerHurtEvent player_hurt = 21;
    PlayerDeathEvent player_death = 22;
    PlayerRespawnEvent player_respawn = 23;
    PlayerSkinChangeEvent player_skin_change = 24;
    PlayerFireExtinguishEvent player_fire_extinguish = 25;
    PlayerStartBreakEvent player_start_break = 26;
    BlockBreakEvent block_break = 27;
    PlayerBlockPlaceEvent player_block_place = 28;
    PlayerBlockPickEvent player_block_pick = 29;
    PlayerItemUseEvent player_item_use = 30;
    PlayerItemUseOnBlockEvent player_item_use_on_block = 31;
    PlayerItemUseOnEntityEvent player_item_use_on_entity = 32;
    PlayerItemReleaseEvent player_item_release = 33;
    PlayerItemConsumeEvent player_item_consume = 34;
    PlayerAttackEntityEvent player_attack_entity = 35;
    PlayerExperienceGainEvent player_experience_gain = 36;
    PlayerPunchAirEvent player_punch_air = 37;
    PlayerSignEditEvent player_sign_edit = 38;
    PlayerLecternPageTurnEvent player_lectern_page_turn = 39;
    PlayerItemDamageEvent player_item_damage = 40;
    PlayerItemPickupEvent player_item_pickup = 41;
    PlayerHeldSlotChangeEvent player_held_slot_change = 42;
    PlayerItemDropEvent player_item_drop = 43;
    PlayerTransferEvent player_transfer = 44;
    CommandEvent command = 45;
    PlayerDiagnosticsEvent player_diagnostics = 46;
    WorldLiquidFlowEvent world_liquid_flow = 70;
    WorldLiquidDecayEvent world_liquid_decay = 71;
    WorldLiquidHardenEvent world_liquid_harden = 72;
    WorldSoundEvent world_sound = 73;
    WorldFireSpreadEvent world_fire_spread = 74;
    WorldBlockBurnEvent world_block_burn = 75;
    WorldCropTrampleEvent world_crop_trample = 76;
    WorldLeavesDecayEvent world_leaves_decay = 77;
    WorldEntitySpawnEvent world_entity_spawn = 78;
    WorldEntityDespawnEvent world_entity_despawn = 79;
    WorldExplosionEvent world_explosion = 80;
    WorldCloseEvent world_close = 81;
  }
}

message PluginToHost {
  string plugin_id = 1;
  oneof payload {
    PluginHello hello = 10;
    EventSubscribe subscribe = 11;
    ActionBatch actions = 20;
    LogMessage log = 30;
    EventResult event_result = 40;
  }
}

message PluginHello {
  string name = 1;
  string version = 2;
  string api_version = 3;
  repeated CommandSpec commands = 4;
  repeated CustomItemDefinition custom_items = 5;
}

message LogMessage {
  string level = 1;
  string message = 2;
}

message EventSubscribe {
  repeated EventType events = 1;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_ALL = 1;

  PLAYER_JOIN = 10;
  PLAYER_QUIT = 11;
  PLAYER_MOVE = 12;
  PLAYER_JUMP = 13;
  PLAYER_TELEPORT = 14;
  PLAYER_CHANGE_WORLD = 15;
  PLAYER_TOGGLE_SPRINT = 16;
  PLAYER_TOGGLE_SNEAK = 17;
  CHAT = 18;
  PLAYER_FOOD_LOSS = 19;
  PLAYER_HEAL = 20;
  PLAYER_HURT = 21;
  PLAYER_DEATH = 22;
  PLAYER_RESPAWN = 23;
  PLAYER_SKIN_CHANGE = 24;
  PLAYER_FIRE_EXTINGUISH = 25;
  PLAYER_START_BREAK = 26;
  PLAYER_BLOCK_BREAK = 27;
  PLAYER_BLOCK_PLACE = 28;
  PLAYER_BLOCK_PICK = 29;
  PLAYER_ITEM_USE = 30;
  PLAYER_ITEM_USE_ON_BLOCK = 31;
  PLAYER_ITEM_USE_ON_ENTITY = 32;
  PLAYER_ITEM_RELEASE = 33;
  PLAYER_ITEM_CONSUME = 34;
  PLAYER_ATTACK_ENTITY = 35;
  PLAYER_EXPERIENCE_GAIN = 36;
  PLAYER_PUNCH_AIR = 37;
  PLAYER_SIGN_EDIT = 38;
  PLAYER_LECTERN_PAGE_TURN = 39;
  PLAYER_ITEM_DAMAGE = 40;
  PLAYER_ITEM_PICKUP = 41;
  PLAYER_HELD_SLOT_CHANGE = 42;
  PLAYER_ITEM_DROP = 43;
  PLAYER_TRANSFER = 44;
  COMMAND = 45;
  PLAYER_DIAGNOSTICS = 46;

  WORLD_LIQUID_FLOW = 70;
  WORLD_LIQUID_DECAY = 71;
  WORLD_LIQUID_HARDEN = 72;
  WORLD_SOUND = 73;
  WORLD_FIRE_SPREAD = 74;
  WORLD_BLOCK_BURN = 75;
  WORLD_CROP_TRAMPLE = 76;
  WORLD_LEAVES_DECAY = 77;
  WORLD_ENTITY_SPAWN = 78;
  WORLD_ENTITY_DESPAWN = 79;
  WORLD_EXPLOSION = 80;
  WORLD_CLOSE = 81;
}